k8s-notifcation-mongodb/policies/default-deny.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: demo
spec:
  podSelector:
    matchLabels: {}
